--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -11,23 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
           python-version: "3.8"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy pandas matplotlib seaborn nbformat nbconvert jupyter_client jupyter ipykernel
+          pip install numpy pandas matplotlib seaborn nbformat nbconvert jupyter_client
 
       - name: Run tests and calculate grade
         run: |
           # Generate climate data
           jupyter nbconvert --to script climate_eda.ipynb --output climate_eda
-          python climate_eda.py
+          python climate_data.py
 
           # Run tests
           python -m unittest test_climate_eda.py
